Bump to Elasticsearch 8.17.1